# TFG

./: .gitignore  Hola.txt  README.md
motor_controller/: proba_control_motors.ino  proba_rebre_encoders.ino
motor_controller/controlador_motor/: controlador_motor.ino
motor_controller/proba_rebre_encoders.ino/: proba_rebre_encoders.ino.ino
robot_ws/: .data
robot_ws/src/firmware_arduino/: CMakeLists.txt  package.xml
robot_ws/src/firmware_arduino/firmware_arduino/: menu_publicador.py  proba_publicador_simple.py  proba_subscriptor_simple.py
robot_ws/src/robot_cpp/: CMakeLists.txt  package.xml
robot_ws/src/robot_cpp/src/: publicador_simple.cpp  suscriptor_simple.cpp
robot_ws/src/robot_py/: package.xml  setup.py
robot_ws/src/robot_py/robot_py/: publicador_simple.py  suscriptor_simple.py
robot_ws/src/rossy/: CMakeLists.txt  package.xml
robot_ws/src/rossy/configuracions/: controlador.yaml  gz_bridge.yaml  mapper_params_online_async.yaml  nav.rviz  robot.rviz  sim.rviz  simulacion_robot.rviz
robot_ws/src/rossy/description/: base_robot.xacro  control_gazebo.xacro  lidar.xacro  macros_inercia.xacro  robot.urdf.xacro  ros2_control.xacro
robot_ws/src/rossy/launch/: archivo.launch.py  navegacio_monitoreig.launch.py  robot.launch.py  rplidar.launch.py  sim_gazebo.launch.py
robot_ws/src/rossy/worlds/: empty.sdf  industrial-warehouse.sdf  obstaculos.sdf
robot_ws/src/rossy_firmware/: CMakeLists.txt  arduino_interface.xml  package.xml
robot_ws/src/rossy_firmware/rossy_firmware/: proba_nodo_driver.py  proba_publicador_simple.py  proba_subscriptor_simple.py
(+2 files in other folders)
